--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -98,7 +98,7 @@ $font-weight-bold: bold !default;
 // Colors
 
 $white							: #FFFFFF;
-$white-translucent	: rgba(255, 255, 255, 0.95);
+$white-translucent	: rgba(255, 255, 255, 0.98);
 $ag-yellow					: #FDDB45;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
@@ -115,9 +115,10 @@ $ag-yellow					: #FDDB45;
 // $steel       : #666666;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
-$oil         : #333333;
+$oil         			 	: #333333;
 // $jet         : #222222;
-$black       : #000000;
+$black      			 	: #000000;
+$none								:	none;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
@@ -209,7 +210,7 @@ $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (m
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
+$h1-font-size: $text-xlarge;
 // $h2-font-size: rem-calc(37);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
@@ -436,8 +437,8 @@ $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (m
 
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
-// $button-font-color: $white;
-// $button-font-color-alt: $oil;
+$button-font-color: $ag-yellow;
+$button-font-color-alt: $oil;
 // $button-font-tny: rem-calc(11);
 // $button-font-sml: rem-calc(13);
 // $button-font-med: rem-calc(16);
@@ -446,13 +447,13 @@ $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (m
 // $button-font-align: center;
 
 // We use these to control various hover effects.
-// $button-function-factor: -20%;
+$button-function-factor: -20%;
 
 // We use these to control button border and hover styles.
-// $button-border-width: 0px;
-// $button-border-style: solid;
-// $button-bg-color: $primary-color;
-// $button-bg-hover: scale-color($button-bg-color, $lightness: $button-function-factor);
+$button-border-width: 0px;
+$button-border-style: solid;
+$button-bg-color: $black;
+$button-bg-hover: $ag-yellow;
 // $button-border-color: $button-bg-hover;
 // $secondary-button-bg-hover: scale-color($secondary-color, $lightness: $button-function-factor);
 // $secondary-button-border-color: $secondary-button-bg-hover;
@@ -1391,15 +1392,15 @@ $topbar-height: rem-calc(70);
 
 // Set the link colors and styles for top-level nav
 // $topbar-link-color: $white;
-// $topbar-link-color-hover: $white;
+$topbar-link-color-hover: $oil;
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-// $topbar-link-bg: $topbar-bg;
-// $topbar-link-bg-color-hover: $charcoal;
-// $topbar-link-bg-hover: $oil;
+$topbar-link-bg: $none;
+$topbar-link-bg-color-hover: $ag-yellow;
+$topbar-link-bg-hover: $ag-yellow;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
