--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -105,16 +105,16 @@ $ag-yellow					: #FDDB45;
 // $vapor       : #F6F6F6;
 // $white-smoke : #F5F5F5;
 // $silver      : #EFEFEF;
-// $smoke       : #EEEEEE;
+$smoke       : #EEEEEE;
 // $gainsboro   : #DDDDDD;
 // $iron        : #CCCCCC;
-// $base        : #AAAAAA;
+$base        : #AAAAAA;
 // $aluminum    : #999999;
 // $jumbo       : #888888;
 // $monsoon     : #777777;
 // $steel       : #666666;
-// $charcoal    : #555555;
-// $tuatara     : #444444;
+$charcoal    : #555555;
+$tuatara     : #444444;
 $oil         			 	: #333333;
 // $jet         : #222222;
 $black      			 	: #000000;
