--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -133,11 +133,15 @@ footer ul li {
 	padding-top: 40px;
 }
 
+.footer__contact-wrap {
+	display: table;
+	width: 100%;
+}
+
 .footer__contact {
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
-	width: 100%;
 	height: 160px;
 }
 
